# ITSecHF

./: .gitignore  Bevezetes_Kovetelmenyek.docx  README.md  package-lock.json
backend/: .env  .env.example  package-lock.json  package.json
backend/res/fixtures/keys/: client-cert.pem  client-key.pem
backend/src/: caff-helper.js  helper.js  server.js  user-helper.js
docs/: readme.md
docs/1. Intro/: intro.md
docs/2. Requirements/: requirements.md
docs/2. Requirements/UML/: Data flow.uxf
docs/2. Requirements/UML/Use-case/: Admin.uxf  User.uxf
docs/3. Architecture/: architecture.md
docs/3. Architecture/UML/: Component.uxf
docs/3. Architecture/UML/Sequence diagrams/Admin/: 1-admin-delete-CAFF.uxf  2-admin-delete-comment.uxf  3-admin-modify-comment.uxf  4-admin-delete-user.uxf  5-admin-modify-user-data.uxf
docs/3. Architecture/UML/Sequence diagrams/User/: 1-user-modify-user-data.uxf  2-user-upload-CAFF.uxf  3-user-purchase-CAFF.uxf  4-user-comment.uxf  5-user-search-CAFF.uxf  6-user-register.uxf  7-user-log-in.uxf  8-user-browse.uxf
docs/4. Testing/: testing.md
frontend/itsec-frontend/: package-lock.json  package.json
frontend/itsec-frontend/public/: index.html
frontend/itsec-frontend/src/: App.tsx  AppClass.tsx  appProps.tsx  globalVars.tsx
frontend/itsec-frontend/src/components/: BrowsePage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx
parser/: CAFF.h  CIFF.h  CMakeLists.txt  CaffParser.cpp  CaffParser.h  README.md  main.cpp
